--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-konva": "^16.13.0-6",
+    "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
