--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "classname": "0.0.0",
     "formik": "^2.2.0",
+    "gatsby": "^3.1.2",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.20",
     "react": "^16.14.0",
